--- a/front_SPA/index.html
+++ b/front_SPA/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="navbar">
-            <a class="logo"><img src="assets/logo AdoptUnPet.png" height="60px"></a>
+            <a class="logo"><img src="assets/logo_AdoptUnPet.png" height="60px"></a>
             <div class="links">
                 <div><a href="">A propos</a></div>
                 <div><a href="">Jardin</a></div>
@@ -20,9 +20,32 @@
         </div>
         <div class='container'>
             <h2>Aidez-nous à leur offrir une nouvelle vie</h2>
-            <p>xyz€/50 000€ euros de dons. <br>
-            Vous aussi vous pouvez contribuer</p>
-            <button><a href="#">Ici</a></button>
+            <!-- <div class="top-bar">
+                <p>Merci à 'Paul' pour son don de '50' euros.</p>            
+            </div> -->
+            <div class="donnations">
+                <div class="title-don">
+                    <div><h2>Mon don</h2></div>
+                </div>
+                <div class="allprice">
+                    <div class="first-line">
+                        <a href="#"><div>50</div></a>
+                        <a href="#"><div>80</div></a>
+                        <a href="#"><div>100</div></a>
+                        <a href="#"><div>120</div></a>
+                    </div>
+                    <div class="sd-line">
+                        <a href="#"><div>150</div></a>
+                        <a href="#"><div>300</div></a>
+                        <a href="#"><div>500</div></a>
+                        <a href="#"><div>1000</div></a>
+                    </div>    
+                </div>
+                <div class="montant-libre">
+                    <input type="text" placeholder="Montant libre">
+                    <div><p>€</p></div>   
+                </div>
+            </div>    
             <p>ou</p>
             <div class="slide-container">
                 <div class="custom-slider fade">
